# Scrawler

./: .gitignore  Cargo.toml  DEVELOPER.md  README.md  build.rs  install.sh
.github/workflows/: release.yml
Formula/: scrawler.rb
examples/mail/: actions.lua  app.xml  manifest.yml
src/: bundle.rs  config.rs  ipc.rs  lib.rs  main.rs  manifest.rs  mcp.rs  renderer.rs  runtime.rs  storage.rs
