[package]
name = "scrawler"
version = "0.1.0"
edition = "2024"
description = "A portable semantic application runtime for agents."
license = "MIT"

[dependencies]
eframe = "0.35"
image = { version = "0.25", default-features = false, features = ["gif", "png"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
quick-xml = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dirs = "5"
notify-rust = "4"
rfd = "0.15"
tungstenite = { version = "0.24", features = ["native-tls"] }
ureq = "2"
webbrowser = "1"
